--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,8 @@
     <string name="promt_widget_statistic">Статистика</string>
     <string name="promt_widget_weather">Погода</string>
 
+    <string name="promt_setting_first_tab">Данные</string>
+    <string name="promt_setting_second_tab">Настройки</string>
 
 
 
